--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,6 @@ code {
 }
 
 
-
-
-body {
-    background: #fbfbfd;
-}
-
 .new_footer_area {
     background: #fbfbfd;
 }
@@ -49,31 +43,21 @@ body {
 }
 .new_footer_top .company_widget .f_subscribe_two .btn_get {
     border-width: 1px;
-    margin-top: 20px;
+    margin-top: 20px; margin-left: 30px;
 }
-.btn_get_two:hover {
-    background: transparent;
-    color: #5e2ced;
-}
-.btn_get:hover {
-    color: #fff;
-    background: #6754e2;
-    border-color: #6754e2;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
+
 a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     text-decoration: none;
     outline: none;
 }
 
-
-
 .new_footer_top .f_widget.about-widget .f_list li a:hover {
     color: #5e2ced;
+   
 }
 .new_footer_top .f_widget.about-widget .f_list li {
     margin-bottom: 11px;
+    margin-left: 130px;
 }
 .f_widget.about-widget .f_list li:last-child {
     margin-bottom: 0px;
@@ -84,14 +68,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 .f_widget.about-widget .f_list {
     margin-bottom: 0px;
 }
-.new_footer_top .f_social_icon a {
-    width: 44px;
-    height: 44px;
-    line-height: 43px;
-    background: transparent;
-    border: 1px solid #e2e2eb;
-    font-size: 24px;
-}
+
 
   
 
@@ -127,8 +104,6 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-
-
 /*************footer End*****************/
 
 
@@ -139,6 +114,7 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom:56.25%;
     position:relative;
     height:0;
+    margin-top: 30px;
     }
     .map-container-3 iframe{
     left:0;
