travel master completed with firebase and uploaded in git hosted in netlify

--- a/src/Components/HotelDetails/HotelDetails.css
+++ b/src/Components/HotelDetails/HotelDetails.css
@@ -5,6 +5,11 @@
 .book-room-details{
     color:black;
 }
+h1{
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #000;
+}
 .book-room{
     padding:10px;
     color:black;
